# pxd_teststand_software

Calibration_script/: README.md  collecting_constants.py  compare_ini.py  comparison.csv  constant_stability.py  constants.ini  constants_collection.csv  constants_err_collection.csv  constants_new.ini  constants_range.ini  deleted_points.csv  fit.py  get_range.py  main.py  path.ini
LightCal/: MAC_Addresses.csv  MAC_Addresses.csv.xlsx  MAC_Addresses_Corrected_200.xlsx  MainProdMaster.ini  MainProdMaster47rem.ini  MainProdMasterOVP.ini  MainProdMasterOVP_Bulk - TESTINGONLY.ini  MainProdMasterOVP_Bulk.ini  MainProdMasterOVP_Bulk_PREC.ini  MainProdMasterOVP_Bulk_REM.ini  MainProdMasterOVP_Bulk_REM_59.ini  MainProdMasterOVP_Bulk_ch01.ini  MainProdMasterOVP_REM.ini  MainProdMasterOVP_REM_First8.ini  MainProdMasterOVP_REM_Last8.ini  MainProdMasterOVP_TESTING.ini  MainProdMasterOVP_Test.ini  MainProdMasterOVP_fast.ini  MainProdMasterOVP_onlyCh15.ini  MainProdMasterREM.ini
LightCal/LightCal/: CMakeLists.txt  CalManager.cpp  CalManager.h  CalSel.qml  CalSelGui.ui  Makefile  Makefile.Debug  Makefile.Release  OvpTest.cpp  OvpTest.h  PsReceiveParse.cpp  PsReceiveParse.h  PsRemoteControl.cpp  PsRemoteControl.h  SMU.cpp  SMU.h  StartStop.cpp  StartStop.h  bisec.C  eval.C.txt  eval_wite_ini.C  fortuneserver.pro  ftdi.cpp  ftdi.h  main.cpp  server.cpp  server.h  server_ui.ui
LightCal/Project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FTDI.vcxproj  FTDI.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PsRemoteControl.sln  PsRemoteControl.vcxproj  PsRemoteControl.vcxproj.filters  VISA.vcxproj  VISA.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ui_server_ui.h
LightCal/Project/PsRemoteControl.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  PsRemoteControl_manifest.rc  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
LightCal/Project/PsRemoteControl_autogen/: moc_compilation.cpp
LightCal/Project/PsRemoteControl_autogen/EWIEGA46WW/: moc_CalManager.cpp  moc_OvpTest.cpp  moc_PsRemoteControl.cpp  moc_SMU.cpp  moc_StartStop.cpp  (+1 more)
LightCal/RemoteGUI/: BelleII.pro  CMakeLists.txt  CMakeLists.txt.bak  NetworkInter.cpp  NetworkInter.h  NetworkInterface.ui  ServerCmdProc.cpp  ServerCmdProc.h  belle_II_GUI_XME.c  belle_II_GUI_XME_Component.c  belle_II_GUI_XME_Component.c.bak  belle_II_GUI_XME_Component.h  calibration.cpp  calibration.cpp.bak  calibration.h  calibration.h.bak  calibration.ui  calibration.ui.bak  calibrationwindow.cpp  calibrationwindow.cpp.bak  calibrationwindow.h  calibrationwindow.h.bak  calibrationwindow.ui  calibrationwindow.ui.bak  file.cpp  file.h  logdataDefines.h  logdataDefines.h.bak  main.cpp  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.h  mainwindow.h.bak  mainwindow.ui  monitoringwindow.cpp  monitoringwindow.cpp.bak  monitoringwindow.h  monitoringwindow.h.bak  monitoringwindow.ui  startGui.cpp  (+3 more)
LightCal/RemoteGUI/chatReceiver/: CMakeLists.txt  chat.c  chatComponent.c  logdataDefines.h
LightCal/RemoteGUI/chatSender/: CMakeLists.txt  chat.c  chatComponent.c  chatComponent.h
LightCal/RemoteGUI/cmake/: MSVCRedist.cmake
LightCal/common/: PsRemoteControl.cpp  PsRemoteControl.h  StartStop.cpp  StartStop.h
LightCal/xme/trunk/examples/examples_mcu/RTOS_STM32F107VC/: CMakeLists.txt  comp_led.c  comp_led_switcher.c  comp_led_switcher.h  lwip_test.c  lwip_test.h  main.c  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h
LightCal/xme/trunk/examples/examples_mcu/blinky_LM3S8962/: CMakeLists.txt  main.c
LightCal/xme/trunk/examples/examples_mcu/reliable_connection_subscriber_LM3S8962/: CMakeLists.txt  reliableSub.c  reliableSubComponent.c  reliableSubComponent.h
LightCal/xme/trunk/examples/examples_nios/inverted_pendulum/: CMakeLists.txt  FreeRTOSConfig.h  common_ids.h  control.c  control.h  dac.c  dac.h  encode.c  encoder_sensor.h  exe_tdma.c  exe_tdma.h  inverted_pendulum.c  inverted_pendulum.h  ltc1257.c  ltc1257.h  main.c  upm.c  upm.h
LightCal/xme/trunk/examples/mmt/mmtInterface/: CMakeLists.txt  mmtInterface.c
LightCal/xme/trunk/examples/mmt/mmtInterface/components/: CMakeLists.txt  mmtCommander.c  mmtCommander.h  mmtLogger.c  mmtLogger.h  mmtUpdater.c  mmtUpdater.h  mmtUpdaterDummy.c  mmtUpdaterDummy.h
LightCal/xme/trunk/examples/modbusMST/: CMakeLists.txt  modbusMst.c
LightCal/xme/trunk/examples/safeLight/: CMakeLists.txt  light.c  light.h
LightCal/xme/trunk/examples/templateGenerator/: CMakeLists.txt  CMakeListsTemplate.txt.in  componentTemplate.c.in  componentTemplate.h.in  templateGenerator.c  templateGeneratorComponent.c  templateGeneratorComponent.h
LightCal/xme/trunk/examples/testsuite/: CMakeLists.txt
RootMacros/: FIT_GRAPH.c  README.md  analyse_long_term.c  bisec.C  eval_loadregulation.C  eval_testfiles.C  eval_wite_ini.C  fft.c  graphCleaner.C  html.C  loadRegGraphs.C  rndwlk.C
precompiledFirmware/: firmware.map  libbelle_drivers.a.txt  libxme_core_core.a.txt  libxme_freertos_kernel.a.txt  libxme_freertos_memmang.a.txt  libxme_freertos_timers.a.txt  libxme_hal_dio.a.txt  libxme_hal_energy.a.txt  libxme_hal_io.a.txt  libxme_hal_math.a.txt  libxme_hal_mem.a.txt  libxme_hal_net.a.txt  libxme_hal_persistence.a.txt  libxme_hal_random.a.txt  libxme_hal_sched.a.txt  libxme_hal_sharedPtr.a.txt  libxme_hal_sync.a.txt  libxme_hal_table.a.txt  libxme_hal_time.a.txt  libxme_hal_tls.a.txt  libxme_lwip_api.a.txt  libxme_lwip_core.a.txt  libxme_lwip_core_ipv4.a.txt  libxme_lwip_netif_arp.a.txt  libxme_lwip_netif_ethernet.a.txt  libxme_prim_ipLoginServerProxy.a.txt  libxme_stm32f0xspl_adc.a.txt  libxme_stm32f0xspl_gpio.a.txt  libxme_stm32f0xspl_i2c.a.txt  libxme_stm32f0xspl_misc.a.txt  libxme_stm32f0xspl_rcc.a.txt  libxme_stm32f0xspl_spi.a.txt  libxme_target_bsp.a.txt  libxme_target_startup.a.txt
(+425 files in other folders)
